--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image:url("damn daniel background.jpg");
+  background-image:url("REAL damn daniel background.jpg");
   width: 100%;
   text-align:center;
 }
